force-app/main/default/objects/RSC_Complaint__c/RSC_Complaint__c.object-meta.xml
<CustomObject>
    <label>RSC Complaint</label>
    <nameField>
        <displayFormat>RSC-CN-{0000}</displayFormat>
        <label>RSC Complaint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RSC Complaints</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>