force-app/main/default/objects/RSC_Complaint__c/fields/Complaint_Origin__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Origin__c</fullName>
    <label>Complaint Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>