force-app/main/default/objects/RSC_Complaint__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RSC Complaints</relationshipLabel>
    <relationshipName>RSC_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>