force-app/main/default/objects/RSC_Complaint__c/fields/RSC_Complaint_Category__c.field-meta.xml
<CustomField>
    <fullName>RSC_Complaint_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RSC Complaint Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RSC_Complaint_Category__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>RSC_Complaint_Category__c</referenceTo>
    <relationshipLabel>RSC Complaints</relationshipLabel>
    <relationshipName>RSC_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>