force-app/main/default/objects/RSC_Complaint__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>