force-app/main/default/objects/RSC_Complaint__c/validationRules/Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(Status__c), &quot;Closed&quot;)</errorConditionFormula>
    <errorMessage>Record is closed you can&apos;t edit this record</errorMessage>
</ValidationRule>