force-app/main/default/objects/RSC_Complaint__c/listViews/RSC_High_RSC_Complaint.listView-meta.xml
<ListView>
    <fullName>RSC_High_RSC_Complaint</fullName>
    <filterScope>Queue</filterScope>
    <label>RSC High</label>
    <queue>RSC_High</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>