force-app/main/default/objects/RSC_Complaint__c/listViews/RSC_Medium_RSC_Complaint.listView-meta.xml
<ListView>
    <fullName>RSC_Medium_RSC_Complaint</fullName>
    <filterScope>Queue</filterScope>
    <label>RSC Medium</label>
    <queue>RSC_Medium</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>