force-app/main/default/objects/RSC_Complaint__c/listViews/RSC_Normal_RSC_Complaint.listView-meta.xml
<ListView>
    <fullName>RSC_Normal_RSC_Complaint</fullName>
    <filterScope>Queue</filterScope>
    <label>RSC Normal</label>
    <queue>RSC_Normal</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>